cartopy/docs/v0.21/_sources/gallery/web_services/image_tiles.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/web_services/image_tiles.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_web_services_image_tiles.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_web_services_image_tiles.py:


Web tile imagery
----------------

This example demonstrates how imagery from a tile
providing web service can be accessed.

.. GENERATED FROM PYTHON SOURCE LINES 9-31



.. image-sg:: /gallery/web_services/images/sphx_glr_image_tiles_001.png
   :alt: image tiles
   :srcset: /gallery/web_services/images/sphx_glr_image_tiles_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs

    from cartopy.io.img_tiles import Stamen


    def main():
        tiler = Stamen('terrain-background')
        mercator = tiler.crs

        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=mercator)
        ax.set_extent([-90, -73, 22, 34], crs=ccrs.PlateCarree())

        ax.add_image(tiler, 6)

        ax.coastlines('10m')
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.671 seconds)


.. _sphx_glr_download_gallery_web_services_image_tiles.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: image_tiles.py <image_tiles.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: image_tiles.ipynb <image_tiles.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
